Mon Aug 11 11:55:49 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-accessibility-keyboard-properties.glade: Patch from Elijah
	Newren <newren@math.utah.edu> to bring the possible repeat range
	in sync with the keyboard capplet.

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* gnome-accessibility-keyboard-properties.glade: Patch to add 
	two more pixels of spacing between action area and vbox of 
	preferences dialog.

2003-07-24  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* gnome-accessibility-keyboard-properties.glade:
	Allow only numeric values in spinbutton.
	Fixes bugzilla bug# 118175 

2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-accessibility-keyboard-properties.glade,
	  accessibility-keyboard.c:  HIG fixes for ui-review bug 
	  report #98915.

2003-07-16  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-accessibility-keyboard-properties.glade:  Adjust widget 
	padding to make dialog a little more HIG compliant.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-accessibility-keyboard-properties.c: Merge fix
	for bug #110266.

2003-04-30  Alex Duggan  <aldug@astrolinux.com>

	* gnome-accessibility-keyboard-properties.c: use appropriate
	window border icon.

2003-04-30  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-accessibility-keyboard-properties.c: Fix build
	on Solaris. Fixes bug #106196.

2003-02-21  Calum Benson  <calum.benson@sun.com>

	* gnome-accessibility-keyboard-properties.glade:
	HIG-ified frames and labels.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>
