@@ -1,3 +1,11 @@
+2003-10-28  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=120842
+	* gnome-accessibility-keyboard-properties.glade : Remove bone headed
+	  spitting of checkbox and label.
+	* accessibility-keyboard.c (setup_toggles) : It was probably done so
+	  that the headers could be made bold.
+
 Mon Aug 11 11:55:49 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-accessibility-keyboard-properties.glade: Patch from Elijah
@@ -77,7 +85,7 @@ Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>
 
 2003-01-08  Jody Goldberg <jody@gnome.org>
 
-	http://bugzilla.gnome.org/show_bug.cgi?id=a96483
+	http://bugzilla.gnome.org/show_bug.cgi?id=96483
 	* accessibility-keyboard.c : sigh.  The defaults apparently need to be
 	  0 too.
 
